# pcie

./: Cargo.toml  README.md  bare-test.toml
src/: address.rs  bar_alloc.rs  cardbusbridge.rs  device.rs  endpoint.rs  endpoiont.rs  err.rs  header.rs  lib.rs  pcipcibridge.rs  preludes.rs  root.rs  types.rs  unknown.rs
src/addr_alloc/: id_allocator.rs  mod.rs
src/chip/: generic.rs  mod.rs
src/types/: bar.rs  config_space.rs  header.rs  mod.rs
src/types/config/: card_bridge.rs  endpoint.rs  mod.rs  pci_bridge.rs  unknown.rs
src/types/header/: bridge.rs  endpoint.rs
tests/: test.rs  tests.rs
