[package]
name = "pcie"
version = "0.2.6"
edition = "2021"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://gitee.com/ZR233/pcie"
license = "MIT"
description = "A simple PCIE driver for enumerating devices."
keywords = ["os", "pci", "pcie", "driver"]
categories = ["embedded", "no-std"]


[dependencies]
log = "0.4"
bit_field = "0.10"
bitflags = "2"
pci_types = "0.10"

[dev-dependencies]
bare-test = "0.1"

[build-dependencies]
sparreal-macros = "0.0.5"
